-bug: Browser query string does not contain arguments
-bug: inject_form_variables does not operate if more than 1 variable needs replacing
-bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
-bug: verify DS MAX value on data source create (courtesy Fireball)
-documentation: Remove sgml documentation.  See http://docs.cacti.net for Documentation
-documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
-documentation: Documentation of specific rrdtool feature
-documentation: Use of SNMP exec option up to net-snmp 5.3
-feature#0000475: Add RRDTool options currently not settable within Cacti
-feature#0000726: add VDEF support
-feature#0000967: Option to force users to use SSL
-feature#0000954: implement --alt-y-grid graph option
-feature#0001009: XML Syntax enhancements (as a dup of 1225 only)
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates
-feature#0001111: add remove-device.php cli script, replace numerical constants for permission handling by PERM_*
-feature#0001122: Propagate Device Template changes to related hosts, pops up a confirmation form (new templates and changed reindex only, no deletes)
-feature#0001123: Performance tweak by adding some indices
-feature#0001124: Devices/Host Templates - remove already associated objects from dropdown selector
-feature#0001179: Visual Fix for CACTI Graphs View Interface(list,preview)
-feature#0001185: Mass enable/disable graph export per graph from Graph Management
-feature#0001225: HowTo use the index at an arbitrary place in the OID field: introduces <rewrite_index>, <rewrite_value> to XML
-feature#0001290: Modify how 'Index Count Changed' re-index is used
-feature#0001332: non SNMP Hosts' Reindex Method should not default to "Uptime goes backwards"
-feature#0001341: SNMP query: add oid_suffix for weird SNMP queries