@@ -67,6 +67,7 @@ Cacti CHANGELOG
 -bug: inject_form_variables does not operate if more than 1 variable needs replacing
 -bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
 -bug: verify DS MAX value on data source create (courtesy Fireball)
+-bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
 -documentation: Remove sgml documentation.  See http://docs.cacti.net for Documentation
 -documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
 -documentation: Documentation of specific rrdtool feature
